# antbot

./: .gitignore  Cargo.toml  README.md  requirements.txt  setup.ps1
backend/python/: ai_oracle.py  api_client.py  cache.py  coin_analyzer.py  config_manager.py  database.py  error_handling.py  liquidity_monitor.py  logger.py  main.py  security.py  transaction_pipeline.py
backend/rust/: logging.rs  main.rs
backend/rust/ant_colony/: capital_manager.rs  performance_monitor.rs  princess.rs  profit_manager.rs  queen.rs  reinvestment_manager.rs  rug_detector.rs  sentry.rs  transaction_handler.rs  worker.rs
backend/rust/api/: mod.rs
backend/rust/backend/: websocket.rs
backend/rust/frontend/: App.tsx  index.tsx  theme.ts
backend/rust/python/: logging.py  mod.rs
config/: api_keys.toml  rpc.toml  settings.toml
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.jsx  App.tsx  index.css  index.tsx
frontend/src/styles/: main.css  (+1 more)
python/: ai_oracle.py  liquidity_monitor.py  main.py  transaction_pipeline.py
scripts/: init_logging.py  init_vault.sh  reorganize.ps1  start_bot.sh  test_network.sh
src/: main.rs
src/ant_colony/: drone.rs  mod.rs  princess.rs  sentry.rs  worker.rs
src/common/: mod.rs
src/config/: mod.rs
src/rpc/: mod.rs
src/sniping_core/: buy_engine.rs  exit_strategies.rs  mod.rs  radar.rs
tests/chaos/: mod.rs
tests/integration/: full_system_workflow.rs  mod.rs
tests/python_tests/: test_ai_oracle.py
tests/rust_tests/: test_ant_colony.rs  test_sniping_core.rs
(+36 files in other folders)
