[package]
name = "antbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
log4rs = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
sentry = "0.30"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
solana-client = "1.16"
solana-sdk = "1.16"
deadpool = "0.9"
notify = "6.1"
validator = { version = "0.16", features = ["derive"] }
toml = "0.7"
axum = { version = "0.6", features = ["ws"] }
tokio-tungstenite = "0.19"
futures-util = "0.3"
governor = "0.6"
tower = "0.4"
uuid = { version = "1.3", features = ["v4"] }
config = "0.13"
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
async-trait = "0.1"
parking_lot = "0.12"
thiserror = "1.0"
futures = "0.3" 